--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,6 +14,8 @@
 <div class="main-content">
     {{>header}}
 
+    <p> This site was created by Sitaram Upadhya. It uses data from weatherstack.com and mapbox.com </p>
+
 <img class ="portrait" src="./img/me.jpg">
 
 </div>
